[package]
name = "nolladb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
sqlparser = "0.13.0"
rstest = "0.12"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.0"
